<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CategorySelection">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/scheme_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioButton
            android:id="@+id/rbChoice1"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/scheme_blue"
            android:text="@string/radio_characters"
            android:textColor="#FFFFFF"
            android:textColorHighlight="@color/scheme_blue"
            android:textColorLink="@color/scheme_blue" />

        <RadioButton
            android:id="@+id/rbChoice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_planets"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbChoice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_species"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbChoice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_ships"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="161dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/scheme_red"
        android:onClick="beginQuizButtonClick"
        android:text="@string/btn_text_begin_quiz"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Begin Quiz" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:padding="1dp"
        android:text="@string/fake_frozen_app_disclaimer"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>