<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".QuestionPage"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="30dp">

    <TextView
        android:id="@+id/labelQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textColor="@color/scheme_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelQuestionNum" />

    <TextView
        android:id="@+id/labelQuestionNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/question_number_text"
        android:textAlignment="center"
        android:textColor="@color/scheme_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgAnswers"
        android:layout_width="196dp"
        android:layout_height="298dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmitAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelQuestion">

        <RadioButton
            android:id="@+id/rbChoice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:text="Choice 1"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbChoice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choice 2"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbChoice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choice 3"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbChoice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Choice 4"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmitAnswer"
        android:layout_width="161dp"
        android:layout_height="58dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/scheme_red"
        android:onClick="submitAnswerButtonClicked"
        android:text="@string/btn_text_submit_answer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="161dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#989999"
        android:onClick="goBackToCategorySelection"
        android:text="@string/btn_text_restart_quiz"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Restart Quiz" />


</androidx.constraintlayout.widget.ConstraintLayout>